Fix scroll behaviour on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+html {
+    overflow: hidden;
+    scroll-behavior: none;
+}
+
 body {
     background: no-repeat center center fixed;
     -webkit-background-size: cover;
